delete overflow-x to fix star dropdowns

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 * {
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
 }
 
 :root {
@@ -61,11 +60,12 @@ div,
 .dropdown-menu{
   background-color: #313439 !important;
   align-items: center !important;
+  overflow-x: visible !important;
 }
 
 .dropdown-item{
-  width: 100% !important;
   align-items: center !important;
+  overflow-x: visible !important;
 }
 
 /* The transparent class is here for if I add any placeholder fields */
@@ -383,14 +383,17 @@ table {
 
   .dropdown-toggle{
     font-size: 11px !important;
+    overflow-x: visible !important;
   }
 
   .dropdown-menu{
     font-size: 11px !important;
+    overflow-x: visible !important;
   }
   
   .dropdown-item{
     font-size: 11px !important;
+    overflow-x: visible !important;
   }
  
 }
